--- a/Projeto/css/sobre.css
+++ b/Projeto/css/sobre.css
@@ -16,21 +16,13 @@
     --branco:#ffffff;
 }
 
-body{
-    color:var(--preto);
-    background: var(--branco);
-}
-
-/* HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER*/
-
 .navigation{
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 5px 40px;
-    width: 100%;
+    width: 100vw;
     background: var(--preto);
-    box-shadow: 0 0.1rem 0.5rem var(--laranja);
     transition:all 0.5s;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
@@ -49,9 +41,6 @@ body{
     align-items: center;
     gap: 5rem;
 }
-.nav-menu a{
-    transition: all 0.3s;
-}
 
 .navigation a{
     font-size: 16px;
@@ -60,7 +49,6 @@ body{
 }
 .nav-menu a:hover{
     color:var(--laranja);
-    
 }
 
 .menu-icon {
@@ -69,25 +57,33 @@ body{
     align-items: center;
     gap: 1.5rem;
     font-size: 1.5rem;
+
 }
 
 
-/* MAIN MAIN MAIN MAIN MAIN MAIN MAIN MAIN MAIN MAIN MAIN MAIN MAIN*/
 
-.back-ground-main{
-    background-image: url(../img/MAIN-banner.PNG);
-    padding-top: 45px;
-    width:100vw;
-    background-repeat: no-repeat;
-    height: 700px;
-    background-size: cover;
+main{
+    color: var(--branco);
+    max-width: 100vw;
+    width:100%;
+    
 }
-
-/* .principal{
-    background: rgb(75,16,53);
-    height: 850px;
-    padding-top: 55px;
-    background-image: url(../img/prin.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100vw; */
+.conteudo{
+    position: absolute;
+    align-items: center;
+    text-align: center;
+    margin: 40px;
+    z-index: 1;
+    font-size: 20px;
+}
+.conteudo .texto1{
+    line-height: 2.0rem;
+}
+main img{
+    z-index: 0;
+    overflow: hidden;
+    position: relative;
+    
+    width: 100%;
+    top: -50px;
+}
